[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "numpy>=1.26.4",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
    "tabulate>=0.9.0",
    "langchain-community>=0.3.18",
    "trafilatura>=2.0.0",
]
